--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
 
 
 <body>
-<div class="header">
+<div id="home" class="header">
     <div class="container">
         <div class="menu">
             <div class="menu-logo">
@@ -49,13 +49,13 @@
                     <ul>
                         <li>
                             <label for="mob" class="close">X</label>
-                            <a href="">HOME</a>
-                            <a href="">Services</a>
-                            <a href="">About</a>
-                            <a href="">Portfolio</a>
-                            <a href="">Academic</a>
-                            <a href="">Blog</a>
-                            <a href="">Contact Us</a><br>
+                            <a href="#home">HOME</a>
+                            <a href="#service">Services</a>
+                            <a href="#about">About</a>
+                            <a href="#portfolio">Portfolio</a>
+                            <a href="#price">Academic</a>
+                            <a href="#blog">Blog</a>
+                            <a href="#contact">Contact Us</a><br>
                             <a class="contactmob">(+966- 322 322)</a>
                         </li>
                     </ul>
@@ -115,7 +115,7 @@
         </div>
     </div>
 </div>
-<section class="service">
+<section id="service" class="service">
     <div class="container">
         <div class="title">
             <div class="title-text">
@@ -172,7 +172,7 @@
         </div>
     </div>
 </section>
-<section class="about service">
+<section id="about" class="about service">
     <div class="container">
         <div class="title">
             <div class="title-text">
@@ -197,7 +197,7 @@
         </div>
     </div>
 </div>
-<section class="portfolio service">
+<section id="portfolio" class="portfolio service">
     <div class="container">
         <div class="portfolio-block">
             <div class="portfolio-block_box">
@@ -330,7 +330,7 @@
 
     </div>
 </section>
-<section class="about service">
+<section id="price" class="about service">
     <div class="title">
         <div class="title-text">
             <h3>HOW WE WORK</h3>
@@ -594,7 +594,7 @@
     </div>
 </section>
 
-<div class="service">
+<div id="blog" class="service">
     <div class="title">
         <div class="title-text">
             <h3>UPDATES & SUPPORT</h3>
@@ -642,7 +642,7 @@
     </div>
 </section>
 
-<section class="footer">
+<section id="contact" class="footer">
     <div class="container">
         <div class="footer-block">
             <div class="footer-block_menu">
@@ -677,7 +677,7 @@
 
             <div class="footer-social_icon">
                 <a href="#">
-                <i class="fa fa-facebook" aria-hidden="true"></i>
+                    <i class="fa fa-facebook" aria-hidden="true"></i>
                 </a>
             </div>
 
