--- a/app/index.html
+++ b/app/index.html
@@ -65,7 +65,7 @@
         <div class="head">
             <div class="head-text">
                 <div class="head-text_arow">
-                    <img src="/img/strelka.png" alt="">
+                    <img src="img/strelka.png" alt="">
                 </div>
                 <h2>UNIQUE-TECH <br>
                     APP DEVELOPMENT</h2>
@@ -77,23 +77,23 @@
                     sunt
                     in culpa qui officia deserunt mollit. </p>
                 <div class="head-text_butt">
-                    <a href="">View More <img src="/img/strelka_btn.png" alt=""></a>
+                    <a href="">View More <img src="img/strelka_btn.png" alt=""></a>
                 </div>
             </div>
             <div class="head-device">
                 <div class="head-device_noyt">
                     <div class="head-device_noyt__slide">
                         <div class="div">
-                            <img src="/img/monitori.png" alt="">
+                            <img src="img/monitori.png" alt="">
                         </div>
                         <div class="div">
-                            <img src="/img/monitori.png" alt="">
+                            <img src="img/monitori.png" alt="">
                         </div>
                         <div class="div">
-                            <img src="/img/monitori.png" alt="">
+                            <img src="img/monitori.png" alt="">
                         </div>
                     </div>
-                    <img src="/img/noyt.png" alt="">
+                    <img src="img/noyt.png" alt="">
                 </div>
                 <div class="head-device_mob">
                     <div class="head-device_mob__slide">
@@ -107,7 +107,7 @@
                             <img src="img/mob1.png" alt="">
                         </div>
                     </div>
-                    <img src="/img/mob.png" alt="">
+                    <img src="img/mob.png" alt="">
                 </div>
 
             </div>
@@ -372,7 +372,7 @@
             </div>
 
             <div class="price-block_box">
-                <div class="price-block_box__price">
+                <div style="  border-right:none;"  class="price-block_box__price">
                     <h1 style="color:#fbc73a; ">Premium</h1>
                     <p>5 web sites</p>
                     <p>15 e-mails</p>
@@ -410,9 +410,7 @@
                     laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatisquasi architecto beatae
                     vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur.
                     odit aut fugit, sed quia consequuntur magni dolores eos qui ratione. </p>
-
                 <a href="#">BROWSE OUR STORY</a>
-
             </div>
         </div>
     </div>
@@ -479,68 +477,6 @@
         </div>
     </div>
 </section>
-
-<!--<section class="team">-->
-<!--<div class="container">-->
-<!--<div class="team">-->
-<!--<div class="team-block">-->
-<!--<div class="team-block_circle"></div>-->
-<!--<div class="team-block_box">-->
-<!--<img src="img/team/1.png" alt="">-->
-<!--</div>-->
-<!--<div class="team-block_text">-->
-<!--<h1>YED MIRAJ</h1>-->
-<!--<p>UI & UX DESIGNER</p>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="team-block">-->
-<!--<div class="team-block_circle">-->
-<!--<div class="team-block_circle__box">-->
-<!--<img src="" alt="">-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="team-block_text">-->
-<!--<h1>YED MIRAJ</h1>-->
-<!--<p>UI & UX DESIGNER</p>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="team-block">-->
-<!--<div class="team-block_circle">-->
-<!--<div class="team-block_circle__box">-->
-<!--<img src="" alt="">-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="team-block_text">-->
-<!--<h1>YED MIRAJ</h1>-->
-<!--<p>UI & UX DESIGNER</p>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="team-block">-->
-<!--<div class="team-block_circle">-->
-<!--<div class="team-block_circle__box">-->
-<!--<img src="" alt="">-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="team-block_text">-->
-<!--<h1>YED MIRAJ</h1>-->
-<!--<p>UI & UX DESIGNER</p>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="team-block">-->
-<!--<div class="team-block_circle">-->
-<!--<div class="team-block_circle__box">-->
-<!--<img src="" alt="">-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="team-block_text">-->
-<!--<h1>YED MIRAJ</h1>-->
-<!--<p>UI & UX DESIGNER</p>-->
-<!--</div>-->
-<!--</div>-->
-
-<!--</div>-->
-<!--</div>-->
-<!--</section>-->
 
 <section class="team" style="margin-top: 140px">
     <div class="container">
